Delete APE tag.

BUG:141682


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@648984 283d02a7-25f6-0310-bc7c-ecb5cbfe19da